# haskell-interpreter

./: README.md  interpreter.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
example/: comments.aha  conditions.aha  flowControl.aha  for.aha  funcs.aha  if.aha  imports.aha  lists.aha  logical-ops.aha  loop.aha  objects.aha  prints.aha  strings.aha  syntaxError.aha
src/: Interpreter.hs  SimpleParser.hs
test/: InterpreterSpec.hs  ParserSpec.hs  Spec.hs
