cabal-version: 2.2

name: interpreter
version: 0.1.0.0

common common
  build-depends:
    , base >= 4.18
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Interpreter, SimpleParser
  build-depends:
    , parsec
    , containers
    , mtl 
    , text

executable interpreter
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , interpreter
    , containers

test-suite interpreter-tests
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends: 
        base
        , hspec
        , interpreter
        , containers
    default-language:    Haskell2010